[package]
name = "huenotify"
version = "0.1.0"
authors = ["Clint Harrison <clint@flatiron.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
httparse = "1.4.1"
reqwest = "0.11.3"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.7"
