[package]
name = "huenotify"
version = "0.1.0"
authors = ["Clint Harrison <clint@flatiron.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
confy = "0.4.0"
httparse = "1.4.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.7"
url = "2.2.2"
